css/main.css
/* ... */
.row {
  min-height: 40px;
}

#schedule-section {
  height: 800px;
}

@media (max-width: 1100px) {
  .main-title {
    font-size: 12vw !important;
  }

  .main-logo {
    width: 50px !important;
    margin-bottom: -50px !important;
    margin-right: 20px !important;
    margin-left: 20px !important;
  }

  #about-section {
    padding: 5vh 10vw 5vh 10vw !important;
  }
  .prev {
    transform: translateY(-50px) translateX(-40px) !important;
  }
  .next {
    transform: translateY(-50px) translateX(40px) !important;
  }
  .quote {
    padding: 0px 10px !important;
  }
}

@media (max-width: 500px) {
  .main-logo {
    width: 30px !important;
    margin-bottom: -100px !important;
    margin-right: 20px !important;
    margin-left: 20px !important;
  }
}

#about-section {
  padding: 5vh 20vw 5vh 20vw;
}

a:active,
a:focus {
  outline: 0 !important;
  border: none !important;
  -moz-outline-style: none !important;
  outline-style: none !important;
}

@media (max-width: 992px) {
  .col-md-6 {
    min-width: 80vw;
  }
  .text3 {
    font-size: 0.8rem !important;
  }
  .prof {
    width: 90vw !important;
  }
  .prof {
    padding: 5px 0;
  }
  body {
    font-size: 1rem !important;
  }
  h3 {
    font-size: 1.2rem !important;
  }
  .gb {
    padding: 4px 16px;
    cursor: pointer;
    font-size: 1rem;
    border-radius: 4px;
    margin: 0px 10px;
  }
  .figure-caption-title {
    font-size: 1.6rem !important;
  }
  .figure-caption {
    font-size: 1.4rem !important;
  }
  .figure-caption-e {
    font-size: 1rem !important;
  }
  .figure-caption-title-e {
    font-size: 1.2rem !important;
  }
  figure {
    width: 25vw;
  }
  .figure-e {
    width: 25vw;
  }
  .figure-image {
    width: 20vw;
    height: 20vw;
  }
  .figure-image-e {
    width: 17vw;
    height: 17vw;
  }
  .directors {
    padding: 0vw 12.5vw;
  }
  .everyone-else {
    padding: 0vw 5vw;
  }
  .navbar-brand,
  .navbar-toggler {
    font-size: 1.5rem !important;
  }
  .nav-link {
    font-size: 1rem !important;
  }
  .layer2 {
    padding: 4vh 0vh 30px 0vh !important;
  }
}

#ssssc {
  min-height: 760px;
}

.sponsor {
  width: 250px !important;
  margin: 5% 2% !important;
}

.sponsor-row {
  max-width: 80vw;
  width: 100%;
  display: flex;
  margin: 0 auto;
  flex-wrap: wrap;
  justify-content: space-evenly;
}

.sponsor-row > :not(:only-child) {
  padding: 1rem;
}

.sponsor-row > a {
  display: flex;
  justify-content: center;
  flex: 1 calc(240px + 7 * 1vw);
}

.sponsor-row > a > img {
  transition: transform 0.5s, filter 0.5s;
}

#sponsors-sec img {
  max-height: calc(20px + 6 * 1vw);
}

#sponsor-list {
  margin-left: 13%;
  margin-right: 13%;
}

@media (max-width: 1460px) {
  #sponsor-list {
    margin-left: 0%;
    margin-right: 0%;
  }
}

.layer2 {
  padding: 4vh 0vh 40px 0vh;
}

@media (max-width: 1000px) {
  .sponsor {
    width: 175px;
  }
}

.gb {
  box-shadow: 2px 5px 10px #101030;
}

.gb:hover {
  box-shadow: 5px 10px 10px #101030;
}

#title-navbar-left {
  margin-left: 70px;
  font-size: 30px;
  position: absolute;
  transform: translateY(-20px);
}

.faq-page {
  text-align: center;
  clear: both;
  background: url(../img/parallax/city.jpg) no-repeat center center fixed;
  background-size: cover;
}

#copyright-wrapper {
  padding: 2vh 20vw 2vh 20vw;
}

#title-navbar-right {
  color: #ce7b91;
  font-size: 30px;
  transform: translateY(-22px) translateX(170px);
  position: absolute;
}

.masthead {
  min-height: 100vh;
  background: url(../img/parallax/city2.jpg) no-repeat center center fixed;
  background-size: cover;
}

.navbar-brand:hover {
  color: #b8d3d1;
}

.fa-bars {
  transform: translateY(2px);
}

.layer {
  background-color: #101020cc;
  top: 0;
  left: 0;
  min-width: 100vw;
  min-height: 100vh;
}

.layer2 {
  background-color: #101020cf;
}

@media (max-width: 700px) {
  #title-navbar-left {
    margin-left: 10px !important;
    font-size: 20px !important;
    transform: translateY(-12px) translateX(45px) !important;
  }
  #title-navbar-right {
    transform: translateY(-13px) translateX(122px) !important;
    font-size: 20px !important;
  }
  #mainlogo {
    height: 30px !important;
    margin-bottom: 0px !important;
    position: absolute;
    margin-top: 10px;
  }
  .prof {
    padding: 5px 0;
  }
  .sponsor {
    width: 100px;
  }
  .gb {
    padding: 2px 12px;
    cursor: pointer;
    font-size: 1rem;
    border-radius: 4px;
    margin: 0px 5px;
  }
  .figure-caption-title {
    font-size: 3vw !important;
  }
  .figure-caption {
    font-size: 2.5vw !important;
  }
  .figure-caption-e {
    font-size: 2.2vw !important;
  }
  .figure-caption-title-e {
    font-size: 2.5vw !important;
  }
  .cell100,
  th {
    font-size: 0.8rem !important;
    padding-top: 8px !important;
    padding-bottom: 8px !important;
  }
  .table100 {
    padding-top: 30px !important;
  }
  #ssssc {
    min-height: 460px !important;
  }
}

a.hyperlink {
  display: block;
  position: relative;
  top: -5vh;
  visibility: hidden;
}

.slideshow-container {
  position: relative;
  margin: auto;
}

/* Hide the images by default */
.mySlides {
  display: none;
}

/* Next & previous buttons */
.prev,
.next {
  cursor: pointer;
  position: absolute;
  top: 50%;
  color: white !important;
  font-weight: bold;
  padding: 5px;
  font-size: 50px;
  transition: 0.3s ease;
  border-radius: 3px;
  user-select: none;
}

/* Position the "next button" to the right */
.prev {
  left: 0 !important;
  transform: translateY(-50px) translateX(-100px);
}

.next {
  right: 0 !important;
  transform: translateY(-50px) translateX(100px);
}

/* On hover, add a black background color with a little bit see-through */
.prev:hover,
.next:hover {
  color: #999 !important;
}

.highlight {
  transform: scale(1.1);
}

/* The dots/bullets/indicators */
.dot {
  cursor: pointer;
  height: 15px;
  width: 15px;
  margin: 0 2px;
  background-color: #bbb;
  border-radius: 50%;
  display: inline-block;
  transition: background-color 0.6s ease;
}
/* ... */

